use touch-action to replace fastclick; fix nowrap bugs

--- a/src/assets/stylus/base.styl
+++ b/src/assets/stylus/base.styl
@@ -8,3 +8,6 @@ body, html
   -webkit-tap-highlight-color transparent // ios上点击可点击元素时，出现短暂的背景
   background $color-background
   color $color-text
+
+  // replace fastclick, forbid doubleclick
+  touch-action manipulation
